--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "nuxt-swiper": "^1.2.2",
-    "swiper": "^11.1.3",
-    "vue3-carousel": "^0.3.3"
+    "swiper": "^11.1.3"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
